--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         </div>
         <div id="echargeFooter" class="flex alignLeft">
             <p translator>Made by</p>
-            <a href="https://www.deltaco.se/" target="_blank"><img src="assets/img/deltaco.svg"/></a>
+            <a href="https://www.deltaco.se/" target="_blank">DELTACO</a>
             <p translator>Powered by</p>
             <a href="https://evdb.io/" target="_blank"><img src="assets/img/evdb.png"/></a>
         </div>
