--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div id="echargeHeader" class="flex alignLeft">
             <img id="echargeLogo" src=""/>
             <div>
-                <p style="font: normal normal bold 16px/20px Nexa;" translator>Find the right cable with our configurator</p>
+                <p translator>Find the right cable with our configurator</p>
             </div>
         </div>
         <div id="echargeMain">
