--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div id="configurator" class="select0">
                 <div id="cursor">
                     <div class="expand">
-                        <p translator>Select car brand</p>
+                        <p translator style="font: normal normal bold 16px/20px Nexa!important;">Select car brand</p>
                         <p translator>Select model</p>
                         <p translator>Select year model</p>
                         <svg xmlns="http://www.w3.org/2000/svg" class="chevron" viewBox="0 0 23.616 13.503"><path d="M18,20.679l8.93-8.937a1.681,1.681,0,0,1,2.384,0,1.7,1.7,0,0,1,0,2.391L19.2,24.258a1.685,1.685,0,0,1-2.327.049L6.68,14.14a1.688,1.688,0,0,1,2.384-2.391Z" transform="translate(-6.188 -11.246)"/></svg>
